[metadata]
name = stackhpc-openstack-tests
version = 0.1.0
summary = Automated testing for StackHPC OpenStack
description-file = README.md
author = Mark Goddard
author-email = mark@stackhpc.com
url = https://github.com/stackhpc/stackhpc-openstack-tests
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    stackhpc_openstack_tests
